--- a/SportKvest/css/style.css
+++ b/SportKvest/css/style.css
@@ -86,6 +86,10 @@ h6 {
   font-weight: 400;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   position: relative;
 }
@@ -150,12 +154,6 @@ body {
   top: 16%;
 }
 
-.window::after {
-  content: 'Hello';
-  position: absolute;
-  left: 100%;
-}
-
 .overlay {
   display: none;
   -webkit-box-pack: center;
@@ -188,7 +186,7 @@ body {
 
 .overlay__block {
   background-color: #ffffff;
-  width: 450px;
+  width: 400px;
   min-height: 400px;
   color: #000;
 }
@@ -203,7 +201,7 @@ body {
 }
 
 .overlay__question {
-  font-size: 2.5rem;
+  font-size: 2.1rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -221,6 +219,38 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.moon {
+  position: relative;
+  width: 130px;
+  height: 130px;
+  top: 0;
+  left: 79%;
+}
+
+.moon__img {
+  position: absolute;
+  height: -webkit-fill-available;
+  z-index: 10;
+  left: 0;
+  top: 0;
+}
+
+.moon__clock {
+  position: absolute;
+  height: 90px;
+  top: 1.5rem;
+  left: 1.4rem;
+  z-index: 9;
+}
+
+.book img {
+  position: absolute;
+  max-width: 60px;
+  max-height: 30px;
+  bottom: 15.90%;
+  left: 9%;
 }
 @supports (-webkit-appearance:none){
 .wrapp{background:url("../img/basket.svg") center center/cover no-repeat}
