--- a/SportKvest/css/style.css
+++ b/SportKvest/css/style.css
@@ -252,6 +252,57 @@ body {
   bottom: 15.90%;
   left: 9%;
 }
+
+.ball {
+  max-width: 40px;
+  position: relative;
+  top: 3%;
+  left: 49%;
+}
+
+.ball__foliage {
+  position: absolute;
+  top: 0;
+  left: -1em;
+  background-color: #006837;
+  width: 50px;
+  height: 40px;
+  z-index: 10;
+  border-top-left-radius: 70px;
+}
+
+.ball img {
+  position: absolute;
+  max-width: 50px;
+  width: 100%;
+  top: 0;
+  left: -0.7em;
+  z-index: 1;
+}
+
+.ball img:active {
+  left: -0.75em;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
+.hoov {
+  width: 115px;
+  height: 13px;
+  background-color: green;
+  position: absolute;
+  right: 3.3%;
+  top: 14.4rem;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: green;
+}
 @supports (-webkit-appearance:none){
 .wrapp{background:url("../img/basket.svg") center center/cover no-repeat}
 }
