--- a/SportKvest/css/style.css
+++ b/SportKvest/css/style.css
@@ -94,6 +94,161 @@ body {
   position: relative;
 }
 
+body {
+  height: 100vh;
+  background: url("../img/1.jpg") center center/cover no-repeat;
+}
+
+.top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 40px;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.topa {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0 10px;
+  background: rgba(80, 80, 80, 0.33);
+  border-radius: 0px 0px 10px 10px;
+  max-width: 200px;
+  height: 65px;
+  text-align: center;
+  -webkit-transform: translateY(-42%);
+      -ms-transform: translateY(-42%);
+          transform: translateY(-42%);
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
+.topa:hover {
+  -webkit-transform: translateY(-20%);
+      -ms-transform: translateY(-20%);
+          transform: translateY(-20%);
+}
+
+.top a {
+  color: #fff;
+  margin: 10px 5px;
+}
+
+.main {
+  height: 100%;
+  width: 100%;
+}
+
+.welcom {
+  height: 90%;
+}
+
+.welcom__container {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  font-size: 25px;
+  color: #fff;
+}
+
+.info {
+  padding: 10px;
+  background: rgba(80, 80, 80, 0.33);
+  border-radius: 10px;
+  min-height: 70px;
+  max-width: 100%;
+  text-align: center;
+}
+
+.info b {
+  line-height: 70px;
+}
+
+body {
+  background-color: gray;
+  text-align: center;
+  color: #fff;
+}
+
+.mobile {
+  display: none;
+  padding: 20px;
+}
+
+.mobile__container {
+  padding: 0 5px 0 5px;
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+.mobile__label {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #ffab10;
+}
+
+.mobile__text {
+  line-height: 2.5rem;
+}
+
+.mobile__text,
+.mobile__psd {
+  font-size: 1.3rem;
+  text-align: left;
+}
+
+.mobile_active {
+  display: block;
+}
+
+.btn {
+  margin: 15px 0 0 0;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid gray;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-size: 12px;
+  text-align: center;
+  height: 30px;
+  width: 70px;
+  line-height: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
+.btn:hover {
+  background-color: gray;
+  color: #fff;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
 .wrapp {
   height: 100vh;
   width: 100%;
@@ -145,7 +300,6 @@ body {
 
 .window {
   position: absolute;
-  background-color: green;
   width: 80px;
   height: 80px;
   max-width: 200px;
@@ -168,6 +322,7 @@ body {
   z-index: 9999;
   position: absolute;
   top: 0;
+  text-align: left;
 }
 
 .overlay__block {
@@ -178,6 +333,7 @@ body {
   height: 1px;
   background: black;
   margin: 10px 0 -5px 0;
+  border-radius: 2px;
 }
 
 .overlay__container {
@@ -200,7 +356,7 @@ body {
   cursor: pointer;
 }
 
-.overlay__question {
+.overlay__label {
   font-size: 2.1rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -231,6 +387,10 @@ body {
   display: flex;
 }
 
+.overlay__block_active {
+  display: none;
+}
+
 .overlay__advice {
   color: gray;
   position: absolute;
@@ -240,6 +400,21 @@ body {
 
 .overlay__advice_active {
   display: none;
+}
+
+.overlay__block:last-child {
+  min-height: 220px;
+}
+
+.overlay__content {
+  margin: 20px 0 0 0;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.overlay__content span {
+  color: orangered;
 }
 
 .moon {
@@ -311,7 +486,6 @@ body {
 .hoov {
   width: 115px;
   height: 13px;
-  background-color: green;
   position: absolute;
   right: 3.3%;
   top: 14.4rem;
@@ -322,37 +496,10 @@ body {
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: green;
 }
 
 .form {
   padding: 0 0 0 15px;
-}
-
-.form__btn {
-  margin: 15px 0 0 0;
-  color: #000;
-  background-color: #fff;
-  border: 1px solid gray;
-  border-radius: 2px;
-  text-transform: uppercase;
-  font-size: 12px;
-  text-align: center;
-  height: 30px;
-  width: 70px;
-  line-height: 30px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  -webkit-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
-}
-
-.form__btn:hover {
-  background-color: gray;
-  color: #fff;
-  -webkit-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
 }
 
 .form__input_after {
@@ -416,6 +563,14 @@ body {
   padding: 5px 0 5px 10px;
   -webkit-box-shadow: 0 3px 11px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 0 3px 11px 4px rgba(0, 0, 0, 0.2);
+}
+
+.clock {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.3rem;
+  color: #0eb80e;
 }
 
 @media (max-width: 1440px) {
@@ -576,7 +731,14 @@ body {
     font-size: 1.5rem;
   }
 }
+
+@media (max-width: 425px) {
+  .info {
+    max-width: 85%;
+  }
+}
 @supports (-webkit-appearance:none){
+body{background:url("../img/1.webp") center center/cover no-repeat}
 .wrapp{background:url("../img/basket.svg") center center/cover no-repeat}
 }
 
@@ -592,6 +754,14 @@ body {
 
 @supports (-webkit-appearance:none){
 .wrapp{background:url(../img/basket.svg) center center/cover no-repeat}
+}
+
+}
+
+ @media (max-width: 425px){
+
+@supports (-webkit-appearance:none){
+
 }
 
 }
